fix mobile lottie container top margin on mobile map component

--- a/src/styles/MapPage.module.css
+++ b/src/styles/MapPage.module.css
@@ -32,6 +32,10 @@
     padding-right: 5vw;
 }
 
+.mobileLottieContainer {
+    margin-top: -11px;
+}
+
 .lottieContainer {
     display: flex;
     flex-direction: column;
